fix p spacing in code snippets (#311)

--- a/docs/assets/css/_example.scss
+++ b/docs/assets/css/_example.scss
@@ -104,4 +104,7 @@ code:not([class*="language-"]) {
 
 .language-html p {
   font-size: 1em;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
 }
